--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "@vercel/analytics": "^1.6.1",
     "d3-geo": "^3.1.1",
     "next": "16.1.1",
-    "react": "19.2.3",
-    "react-dom": "19.2.3",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-simple-maps": "^3.0.0",
     "topojson-client": "^3.1.0"
   },
@@ -21,8 +21,8 @@
     "@tailwindcss/postcss": "^4",
     "@types/d3-geo": "^3.1.0",
     "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "@types/topojson-client": "^3.1.5",
     "eslint": "^9",
     "eslint-config-next": "16.1.1",
