--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.24.1",
     "@vercel/analytics": "^1.6.1",
     "d3-geo": "^3.1.1",
+    "dotenv": "^17.2.3",
+    "framer-motion": "^12.29.0",
+    "lucide-react": "^0.563.0",
     "next": "16.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
